bk_ida/gccida/g3/mark_used_regs
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4141:4: error: expected ';' after expression
rtx v18; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4141:5: error: use of undeclared identifier 'v18'
rtx v18; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4142:4: error: expected ';' after expression
rtx v19; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4142:5: error: use of undeclared identifier 'v19'
rtx v19; // r11 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4147:4: error: expected ';' after expression
rtx v24; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4147:5: error: use of undeclared identifier 'v24'
rtx v24; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4150:4: error: expected ';' after expression
rtx mem_set_list; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4150:5: error: use of undeclared identifier 'mem_set_list'; did you mean 'reg_set_last'?
rtx mem_set_list; // r15 
    ^~~~~~~~~~~~
    reg_set_last
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/rtl.h:1485:12: note: 'reg_set_last' declared here
extern rtx reg_set_last                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4151:4: error: expected ';' after expression
rtx v28; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4151:5: error: use of undeclared identifier 'v28'
rtx v28; // r11 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4153:4: error: expected ';' after expression
rtx temp; // [rsp+0h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4153:5: error: use of undeclared identifier 'temp'; did you mean 'tempb'?
rtx temp; // [rsp+0h] [rbp-68h] 
    ^~~~
    tempb
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4152:5: note: 'tempb' declared here
int tempb; // [rsp+0h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4156:6: error: use of undeclared identifier 'listp'
rtx *listp; // [rsp+10h] [rbp-58h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4158:4: error: expected ';' after expression
rtx preva; // [rsp+18h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4158:5: error: use of undeclared identifier 'preva'; did you mean 'prev'?
rtx preva; // [rsp+18h] [rbp-50h] 
    ^~~~~
    prev
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4157:18: note: 'prev' declared here
 struct rtx_def *prev; // [rsp+18h] [rbp-50h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4163:1: error: use of undeclared identifier 'listp'
listp = &pbi->mem_set_list; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4178:11: error: expected ';' after expression
x = ( rtx)x[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4188:22: error: use of undeclared identifier 'listp'
free_INSN_LIST_list( listp); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/flow.c:4191:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( int *)x[2]; 
              ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_used_regs/src/obj/flow.o] Error 1
